# rknn-llm

./: README.md  test  test.cpp
deployment/: ai-app.yaml  deploy.yaml
rkllm-runtime/example/: CMakeLists.txt  Readme.md  build-android.sh  build-linux.sh.bak  build.sh
rkllm-runtime/example/src/: main.cpp  main.cpp.bak  tmp.cpp
rkllm-runtime/runtime/Linux/librkllm_api/include/: rkllm.h
rkllm-toolkit/examples/huggingface/: test-2.py  test.py  test.py.bak
